ajust code on sonar reporting